# rsdish-cli

./: .gitignore  Cargo.toml  README.md  README_cn.md  README_en.md  build.rs  dist-workspace.toml
.github/workflows/: release.yml
src/: lib.rs  logi.rs  phy.rs  user.rs
src/logi/: clean.rs  exec.rs  gp.rs  link.rs  mem.rs  sync.rs  vmem.rs
src/phy/: cab.rs  cab_conf.rs  dk.rs  stg.rs
src/user/: user_conf.rs
