[package]
name = "rsdish"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "rsdish"
path = "src/bin/rsdish-cli/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
confy = "1.0.0"
dotenvy = "0.15.7"
ignore = "0.4.24"
serde = { version = "1.0.228", features = ["derive"] }
shell-words = "1.1.0"
sysinfo = { version = "0.36.1", features = ["multithread"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v7"] }
